<resources>
    <string name="app_name" translatable="false">WorkoutCollector</string>
    <string name="email">Email</string>
    <string name="login">Login</string>
    <string name="todo">TODO</string>
    <string name="remember_me">Remember me</string>
    <string name="password">Password</string>
    <string name="don_t_have_an_account_sign_up">Don\'t have an account? Sign Up</string>
    <string name="full_name">Full Name</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="sign_up">Sign Up</string>
    <string name="workout_collector" translatable="false">Workout Collector</string>
    <string name="navigation_home">Home</string>
    <string name="navigation_account">Account</string>
    <string name="results">Results</string>
    <string name="welcome2">"Welcome "</string>
    <string name="enter_email_and_password">Enter Email and Password</string>
    <string name="user_created">User created!</string>
    <string name="please_login">Please Login</string>
    <string name="authentication_failed">Authentication failed.</string>
    <string name="abductors">Abductors</string>
    <string name="abs">Abs</string>
    <string name="adductors">Adductors</string>
    <string name="biceps">Biceps</string>
    <string name="calves">Calves</string>
    <string name="cardiovascular_system">Cardiovascular System</string>
    <string name="delts">Delts</string>
    <string name="forearms">Forearms</string>
    <string name="glutes">Glutes</string>
    <string name="hamstrings">Hamstrings</string>
    <string name="lats">Lats</string>
    <string name="levator_scapulae">Levator Scapulae</string>
    <string name="pectorals">Pectorals</string>
    <string name="quads">Quads</string>
    <string name="serratus_anterior">Serratus Anterior</string>
    <string name="spine">Spine</string>
    <string name="traps">Traps</string>
    <string name="triceps">Triceps</string>
    <string name="upper_back">Upper Back</string>
    <string name="assisted">Assisted</string>
    <string name="band">Band</string>
    <string name="barbell">Barbell</string>
    <string name="body_weight">Body Weight</string>
    <string name="bosu_ball">Bosu Ball</string>
    <string name="cable">Cable</string>
    <string name="dumbbell">Dumbbell</string>
    <string name="elliptical_machine">Elliptical Machine</string>
    <string name="ez_barbell">EZ Barbell</string>
    <string name="hammer">Hammer</string>
    <string name="kettle_bell">Kettle bell</string>
    <string name="leverage_machine">Leverage Machine</string>
    <string name="medicine_ball">Medicine Ball</string>
    <string name="olympic_barbell">Olympic Barbell</string>
    <string name="resistance_band">Resistance Band</string>
    <string name="roller">Roller</string>
    <string name="rope">Rope</string>
    <string name="skierg_machine">SkiErg Machine</string>
    <string name="sled_machine">Sled Machine</string>
    <string name="smith_machine">Smith Machine</string>
    <string name="stability_ball">Stability Ball</string>
    <string name="stationary_bike">Stationary Bike</string>
    <string name="stepmill_machine">Stepmill Machine</string>
    <string name="tire">Tire</string>
    <string name="trap_bar">Trap Bar</string>
    <string name="upper_body_ergometer">Upper Body Ergometer</string>
    <string name="weighted">Weighted</string>
    <string name="wheel_roller">Wheel Roller</string>
    <string name="target_muscles">Target Muscles: %1$s</string>
    <string name="equipment_needed">Equipment Needed: %1$s</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="choose_day_to_add_workout_to">Choose Day to add Workout to:</string>
    <string name="workout_added_to_routine">Workout added to %1$s routine</string>
    <string name="failed_to_add_workout">Failed to add workout</string>
    <string name="user_not_logged_in_or_invalid_workout_id">User not logged in or invalid workout ID.</string>
    <string name="favorites">Favorites</string>
    <string name="choose_by_target_muscle">Choose by Target Muscle:</string>
    <string name="choose_by_equipment_needed">Choose by Equipment Needed:</string>
    <string name="instructions">Instructions:</string>
    <string name="passwordRe">Re-enter Password</string>
    <string name="passNotmatch">Passwords do not match</string>
    <string name="emptyFields">Please Fill Out All Fields</string>
    <string name="noWorkoutsInDay">No Workouts Saved Here</string>
    <string name="noneFound">Uh Oh!</string>
    <string name="you_got_workouts_to_do">You Got Workouts to Do!</string>
    <string name="no_workouts_for_today">No workouts for today</string>
</resources>